2005-01-09 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def: MSVC sync
	* doc/gpsimWin32.html: dependedncy on gawk, ...
	* cli/cli.vcproj, cli/scan.ll: make it work with flex 2.4.31
	* plat/win32/gpsim.nsi, modules/makefile.mingw, modules/modules.vcproj:
	  pthreads 2005-01-03
	* gui/gui_menu.cc: use utf-8 encoded LATIN SMALL LETTER Z WITH CARON
	  instead LATIN SMALL LETTER Z.

2005-01-07 Scott Dattalo <scott@dattalo.com>
	* src/16bit-processors.cc: stop gap hack - added registers
	to hold the places of the analog SFR's
	* cli/socket.cc, src/protocol.h, src/value.cc, src/value.h:
	More socket improvements.

2005-01-05 Scott Dattalo <scott@dattalo.com>
	* src/breakpoints.cc, src/gpsim_classes.h, src/gpsim_interface.h,
	src/interface.cc, src/modules.cc, src/modules.h,
	src/pic-processor.cc, src/protocol.cc, src/protocol.h,
	cli/command.cc, cli/socket.cc:
	Enhancements to support the socket interface. Added a run command
	and a reset command and made them invocable via the interface class.

2005-01-02 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, cli/input.cc, src/interface.cc: Added function
	'gUseThreads()' and use it to run-time select the usage of threads.

2005-01-02 Borut Razem <borut.razem@siol.net>
	* gui/gui_break.cc, gui/dialog.cc, gui/gui_init.cc, gui/gui_menu.cc,
	  gui/gui_processor.cc, gui/gui_src.cc, gui/gui_src_asm.cc
	  gui/gui_src_opcode.cc: removed unneeded include gtkcombobox.h
	* gui/gui_breadboard.cc: fixed compiler warnings
	* cli/Makefile.am, gui/Makefile.am: added AM_ preffix to CFLAGS,
	  CXXFLAGS, CPPFLAGS and YFLAGS
	* doc/gpsimWin32.html: gtk+ version 2.4.14, XHTML 1.0 Transitional compliant,
	  gtk+extra-2-1.1.0-20050102
	* doc/gpsim_cvs.html: changed first build instructions

2004-12-17 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, src/interface.cc, cli/socket.cc: removed
	dependencies on GTK 2.0.

2004-12-19 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: added examples/scripts/client_interface.h