@@ -60,6 +60,7 @@ enum eGPSIMSocketCommands
   {
 
     GPSIM_CMD_CREATE_NOTIFY_LINK    = 0xE0,
+    GPSIM_CMD_CREATE_CALLBACK_LINK  = 0xE1,
 
     GPSIM_CMD_CREATE_SOCKET_LINK    = 0xF0,
     GPSIM_CMD_REMOVE_SOCKET_LINK    = 0xF1,
